# part_opt

./: .gitignore  README.txt
code/dynamic/: block_allocator.cpp  dynamic_array1.h  num_array.h  options.cpp  options.h
code/mex/: mex_io.h
code/optim/graph/: mgraph.h
code/optim/part_opt/: aallocator.h  dee.cpp  dee.h  dee2.cpp  emaxflow.cpp  emaxflow.h  energy.cpp  energy.h  msg_alg.h  opengm_read.cpp  opengm_read_diff_mex.cpp  opengm_write_mex.cpp  part_opt_DEE2_mex.cpp  part_opt_DEE_mex.cpp  part_opt_IK_mex.cpp  part_opt_MQPBO_mex.cpp  part_opt_TRWS.cpp  part_opt_TRWS.h  part_opt_TRWS_mex.cpp  part_opt_interface.cpp  part_opt_interface.h  part_opt_opengm.h  test_part_opt_opengm.cpp  test_random.cpp  todo.txt  trws_machine.cpp  trws_machine.h  vectorizers.h  vectorizers1.h
code/optim/qbranching/: qbranching.cpp  qbranching.h  test.cpp
code/qpbo-v1.3/: QPBO.cpp  QPBO.h  QPBO_maxflow.cpp
matlab/minsum/@energy/: add_f2_full.m  add_global_minl.m  apply_mapping.m  cost.m  display.m  energy.m  f2_cost.m  f2_matrix.m  f2_min_sum_conv.m  f2_tmin_sum_conv.m  f2_to_full.m  get_f2_full.m  get_theta.m  normalize_min.m  permute.m  random_instance.m  reparam.m  set_f2.m  set_f2_full.m  set_f2_sparse.m  verify_improving.m  window.m
matlab/minsum/@graph/: add_edges.m  deg.m  edge_graph.m  edge_index.m  find_edge.m  flip_direction.m  get_in.m  get_neib.m  get_out.m  graph.m  grid16.m  grid4.m  grid8.m  grid_reg.m  in_deg.m  out_deg.m  plot.m  rand_tree.m  restrict.m  shortest_path.m  sp_grid.m
matlab/minsum/@local_poly/: delta.m  get_P.asv  get_P.m
matlab/mtools/: file_path.m  isvar.m  mbin2dec.m  mdec2bin.m  mmean.m  mselect.m  row.m  row3.m  switch_class.m  to_class.m  unit.m
matlab/mtools/img/: applyhatch_pluscolor.m  cumwin2.m  jetim.m  pdffig.m  show_mask.m  soft_window.m  textbp.m
matlab/part_opt/: auto_reshape.m  compose.m  invoke_po_method.m  part_opt_TRWS.m  po_kovtun_plain.m
matlab/part_opt/examples/: example1.m  (+3 more)
projects/part_opt/: CMakeLists.txt  OpenCVFindMatlab.cmake
projects/part_opt/build-mac/: CMakeCache.txt  Makefile  cmake_install.cmake  qbranching  test_random
projects/part_opt/build-mac/CMakeScripts/: ALL_BUILD_cmakeRulesBuildPhase.makeDebug  ReRunCMake.make  ZERO_CHECK_cmakeRulesBuildPhase.makeRelWithDebInfo  exttype_postBuildPhase.makeDebug  exttype_postBuildPhase.makeMinSizeRel  exttype_postBuildPhase.makeRelWithDebInfo  exttype_postBuildPhase.makeRelease  maxflow_BK_postBuildPhase.makeDebug  maxflow_BK_postBuildPhase.makeMinSizeRel  maxflow_BK_postBuildPhase.makeRelWithDebInfo  maxflow_BK_postBuildPhase.makeRelease  opengm_read_mex_postBuildPhase.makeDebug  opengm_read_mex_postBuildPhase.makeMinSizeRel  opengm_read_mex_postBuildPhase.makeRelWithDebInfo  opengm_read_mex_postBuildPhase.makeRelease  opengm_write_mex_postBuildPhase.makeDebug  opengm_write_mex_postBuildPhase.makeMinSizeRel  opengm_write_mex_postBuildPhase.makeRelWithDebInfo  opengm_write_mex_postBuildPhase.makeRelease  part_opt_DEE2_mex_postBuildPhase.makeDebug  part_opt_DEE2_mex_postBuildPhase.makeMinSizeRel  part_opt_DEE2_mex_postBuildPhase.makeRelWithDebInfo  part_opt_DEE2_mex_postBuildPhase.makeRelease  part_opt_DEE_mex_postBuildPhase.makeDebug  part_opt_DEE_mex_postBuildPhase.makeMinSizeRel  part_opt_DEE_mex_postBuildPhase.makeRelWithDebInfo  part_opt_DEE_mex_postBuildPhase.makeRelease  part_opt_IK_mex_postBuildPhase.makeDebug  part_opt_IK_mex_postBuildPhase.makeMinSizeRel  part_opt_IK_mex_postBuildPhase.makeRelWithDebInfo  part_opt_IK_mex_postBuildPhase.makeRelease  part_opt_MQPBO_mex_postBuildPhase.makeDebug  part_opt_MQPBO_mex_postBuildPhase.makeMinSizeRel  part_opt_MQPBO_mex_postBuildPhase.makeRelWithDebInfo  part_opt_MQPBO_mex_postBuildPhase.makeRelease  part_opt_TRWS_mex_postBuildPhase.makeDebug  part_opt_TRWS_mex_postBuildPhase.makeMinSizeRel  part_opt_TRWS_mex_postBuildPhase.makeRelWithDebInfo  part_opt_TRWS_mex_postBuildPhase.makeRelease  part_opt_postBuildPhase.makeDebug  (+13 more)
projects/part_opt/build-mac/part_opt.build/Debug/ZERO_CHECK.build/: Script-A4A858267DE843B49AB26057.sh  dgph
projects/part_opt/build-mac/part_opt.build/Debug/exttype.build/: dgph
projects/part_opt/build-mac/part_opt.build/Debug/exttype.build/Objects-normal/x86_64/: binary_stream.d  binary_stream.dia  block_allocator.d  block_allocator.dia  dataset.d  dataset.dia  exttype.LinkFileList  file_stream.d  file_stream.dia  logs.d  performance.d  pvect.d  text_stream.d  vectn.d  xfs.d  xstringstream.d
projects/part_opt/build-mac/part_opt.build/Debug/maxflow_BK.build/: dgph
projects/part_opt/build-mac/part_opt.build/Debug/maxflow_BK.build/Objects-normal/x86_64/: graph.d  maxflow.d  maxflow.dia  maxflow_BK.LinkFileList
projects/part_opt/build-mac/part_opt.build/Debug/part_opt.build/: dgph
projects/part_opt/build-mac/part_opt.build/Debug/part_opt.build/Objects-normal/x86_64/: dee.d  dee.dia  dee2.d  dee2.dia  energy.d  energy.dia  mgraph.d  mgraph.dia  msg_alg.d  msg_alg.dia  part_opt.LinkFileList  part_opt_TRWS.d  part_opt_TRWS.dia  part_opt_interface.d  part_opt_interface.dia  stream_graph.d  stream_graph.dia  trws_machine.d  trws_machine.dia  vectorizers.d
projects/part_opt/build-mac/part_opt.build/Debug/test_part_opt_opengm.build/: dgph
projects/part_opt/build-mac/part_opt.build/Debug/test_part_opt_opengm.build/Objects-normal/x86_64/: test_part_opt_opengm.LinkFileList  test_part_opt_opengm.d  test_part_opt_opengm.dia
projects/part_opt/build-mac/part_opt.build/Debug/test_random.build/Objects-normal/x86_64/: test_random.LinkFileList
projects/part_opt/build-mac/part_opt.xcodeproj/: project.pbxproj
projects/part_opt/build-mac/part_opt.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
projects/part_opt/build-mac/part_opt.xcodeproj/project.xcworkspace/xcuserdata/shekhovt.xcuserdatad/: UserInterfaceState.xcuserstate
projects/part_opt/build-mac/part_opt.xcodeproj/xcuserdata/shekhovt.xcuserdatad/xcschemes/: ALL_BUILD.xcscheme  ZERO_CHECK.xcscheme  exttype.xcscheme  maxflow_BK.xcscheme  part_opt.xcscheme  test_part_opt_opengm.xcscheme  test_random.xcscheme  xcschememanagement.plist
(+2 files in other folders)
